tests added, getEdge, getVertices added